--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -8,6 +8,10 @@ menu:
   home: 首页
   archives: 归档
   categories: 分类
+  animes: 动漫
+  movies: 电影
+  games: 游戏
+  bookmark: 书签
   tags: 标签
   about: 关于
   search: 搜索
